more of the same

--- a/_posts/getitwrite/2013-08-27-.md
+++ b/_posts/getitwrite/2013-08-27-.md
@@ -41,3 +41,23 @@ really great bit about optimism too. sow some seeds!
 
 one of my grandfather's favorite books: as a man thinketh by james allen
 man controls his dentiny, his actions, all of it, at the very root of his thoughts. grab control of yourself.
+
+alain de botton's new angles on success - making sure it's our own idea, not someone else's.
+
+how to find your purpose and do what you love
+prestige is generally not a good idea
+best way to get approval is not to need it
+creative work vs labor
+
+
+set aside time for worrying (suicide prevention post)
+
+
+that awesome bit of reading that adam recommended on radiolabs
+
+
+read The book of laughter and forgetting by milan kundera and loved it
+recommended by this ted talk on balancing the introversion/extroversion favoritism
+
+education startups: kahn academy, nutmeg (getting it right)
+
