--- a/_posts/getitwrite/2013-08-27-.md
+++ b/_posts/getitwrite/2013-08-27-.md
@@ -43,12 +43,14 @@ one of my grandfather's favorite books: as a man thinketh by james allen
 man controls his dentiny, his actions, all of it, at the very root of his thoughts. grab control of yourself.
 
 alain de botton's new angles on success - making sure it's our own idea, not someone else's.
+Ted talk - make sure we're authors of our own ambitions
 
 how to find your purpose and do what you love
 prestige is generally not a good idea
 best way to get approval is not to need it
 creative work vs labor
-
+how to do what you love brain pickings. Paul Graham's prestige words, find something more important than you, making sure success's definition is our own
+The best way to get approval is not to need it. Don't give a hoot about the other owls. They're a bunch of grumps anyway.
 
 set aside time for worrying (suicide prevention post)
 
@@ -60,4 +62,5 @@ read The book of laughter and forgetting by milan kundera and loved it
 recommended by this ted talk on balancing the introversion/extroversion favoritism
 
 education startups: kahn academy, nutmeg (getting it right)
+
 
