new post! programming creativity

--- a/_posts/techsposure/2013-09-23-meetups.md
+++ b/_posts/techsposure/2013-09-23-meetups.md
@@ -18,3 +18,9 @@ networking
 etc.
 just go!
 
+
+
+
+note: 
+helper pages - shortcuts i use (chrome, sublime)
+resource pages - learning resources, list/tag languages + difficulty level
