notes for next post

--- a/_posts/techsposure/2013-10-02-bosses.md
+++ b/_posts/techsposure/2013-10-02-bosses.md
@@ -13,4 +13,8 @@ treehouse getting rid of bosses post(s)
 
 github has flat engineering dept post(s)
 
-the shorter the distance between stackholders the better
+the shorter the distance between stackholders the better the product will be
+
+job stories vs user stories?
+
+control issues - autonomy, scalability, growth-sling-shot, too much hand-holding
