--- a/_posts/techsposure/2013-10-30-bosses.md
+++ b/_posts/techsposure/2013-10-30-bosses.md
@@ -18,3 +18,28 @@ the shorter the distance between stackholders the better the product will be
 job stories vs user stories?
 
 control issues - autonomy, scalability, growth-sling-shot, too much hand-holding
+
+
+
+
+
+keep your branches simple
+  - one feature or one bug
+
+
+master is always deployable
+
+
+everyone branches/pushes/merges
+
+
+
+pull requests are a discussion
+code, feature, strategy
+
+
+
+http://www.youtube.com/watch?v=qyz3jkOBbQY
+
+
+
