notes added to git it write

--- a/_posts/getitwrite/2013-08-27-.md
+++ b/_posts/getitwrite/2013-08-27-.md
@@ -40,3 +40,142 @@ that awesome bit of reading that adam recommended on radiolabs
 education startups: kahn academy, nutmeg (getting it right)
 
 
+
+http://www.paulgraham.com/opensource.html
+
+
+Actually, the fad is the word "blog," at least the way the print media now use it. What they mean by "blogger" is not someone who publishes in a weblog format, but anyone who publishes online. That's going to become a problem as the Web becomes the default medium for publication. So I'd like to suggest an alternative word for someone who publishes online. How about "writer?"
+
+Those in the print media who dismiss the writing online because of its low average quality are missing an important point: no one reads the average blog. In the old world of channels, it meant something to talk about average quality, because that's what you were getting whether you liked it or not. But now you can read any writer you want. So the average quality of writing online isn't what the print media are competing against. They're competing against the best writing online. And, like Microsoft, they're losing.
+
+Another thing blogs and open source software have in common is that they're often made by people working at home. That may not seem surprising. But it should be. It's the architectural equivalent of a home-made aircraft shooting down an F-18.
+
+That is one of the key tenets of professionalism. Work and life are supposed to be separate. But that part, I'm convinced, is a mistake.
+
+Ironically, though open source and blogs are done for free, those worlds resemble market economies, while most companies, for all their talk about the value of free markets, are run internally like communist states.
+
+The big advantage of investment over employment, as the examples of open source and blogging suggest, is that people working on projects of their own are enormously more productive. And a startup is a project of one's own in two senses, both of them important: it's creatively one's own, and also economically ones's own.
+
+Why not let people spend 100% of their time on their own projects, and instead of trying to approximate the value of what they create, give them the actual market value? Impossible? That is in fact what venture capitalists do.
+
+Hackers tend to think business is for MBAs. But business administration is not what you're doing in a startup. What you're doing is business creation. And the first phase of that is mostly product creation-- that is, hacking. That's the hard part. It's a lot harder to create something people love than to take something people love and figure out how to make money from it.
+
+
+
+thoughts:
+
+- this could be released on maker day
+- maker day video on vine
+- my first maker day: 2nd day on the job, thrown in the deep end with Q and promises
+
+autonomy/self direction
+control your environment
+freedom of hours
+creativity
+
+you hired these people!
+you get out what you put in: trust!
+biggest problem is overworking, not under
+happy employees produce valuable work
+
+
+things you can do on maker day
+
+- make a vine documentary of the day
+- make
+
+
+talk about writing this, about how max sent some articles, about how adam talks about PG and Uncle Bob, how I'm reading him for the first time
+
+
+pg 
+
+	- the structure of business doesn't reflect the fact that people work harder on stuff they like
+	- "Like rich food, idleness only seems desirable when you don't get enough of it."
+	- "people working for love often surpass those working for money."
+	- "Users don't switch from Explorer to Firefox because they want to hack the source. They switch because it's a better browser."
+	- "professionalism was largely a fashion"
+	- "Actually, the fad is the word "blog," at least the way the print media now use it. What they mean by "blogger" is not someone who publishes in a weblog format, but anyone who publishes online. That's going to become a problem as the Web becomes the default medium for publication. So I'd like to suggest an alternative word for someone who publishes online. How about "writer?""
+	- "To me the most demoralizing aspect of the traditional office is that you're supposed to be there at certain times. There are usually a few people in a company who really have to, but the reason most employees work fixed hours is that the company can't measure their productivity."
+	- "Another thing blogs and open source software have in common is that they're often made by people working at home. That may not seem surprising. But it should be. It's the architectural equivalent of a home-made aircraft shooting down an F-18."
+	- "The basic idea behind office hours is that if you can't make people work, you can at least prevent them from having fun. If employees have to be in the building a certain number of hours a day, and are forbidden to do non-work things while there, then they must be working. In theory. In practice they spend a lot of their time in a no-man's land, where they're neither working nor having fun."
+	- "Meetings are like an opiate with a network effect. So is email, on a smaller scale. And in addition to the direct cost in time, there's the cost in fragmentation-- breaking people's day up into bits too small to be useful."
+	- "You can see how dependent you've become on something by removing it suddenly. So for big companies I propose the following experiment. Set aside one day where meetings are forbidden-- where everyone has to sit at their desk all day and work without interruption on things they can do without talking to anyone else. Some amount of communication is necessary in most jobs, but I'm sure many employees could find eight hours worth of stuff they could do by themselves. You could call it "Work Day.""
+	- "The other problem with pretend work is that it often looks better than real work. When I'm writing or hacking I spend as much time just thinking as I do actually typing. Half the time I'm sitting drinking a cup of tea, or walking around the neighborhood. This is a critical phase-- this is where ideas come from-- and yet I'd feel guilty doing this in most offices, with everyone else looking busy."
+	- "So these, I think, are the three big lessons open source and blogging have to teach business: (1) that people work harder on stuff they like, (2) that the standard office environment is very unproductive, and (3) that bottom-up often works better than top-down."
+
+	- "When you're operating on the maker's schedule, meetings are a disaster. A single meeting can blow a whole afternoon, by breaking it into two pieces each too small to do anything hard in."
+	- "I wouldn't be surprised if there start to be more companies like us. I suspect founders may increasingly be able to resist, or at least postpone, turning into managers, just as a few decades ago they started to be able to resist switching from jeans to suits."
+
+
+http://www.paulgraham.com/makersschedule.html
+
+http://www.paulgraham.com/opensource.html
+
+http://www.craigkerstiens.com/2011/11/07/how-heroku-works-maker-day/
+
+heroku's maker day
+	- context switching is crucial - wasted time, and rarely without loss
+	- hugely productive - get through the bulk of the work you pulled out of your weekly product meeting
+
+http://www.codinghorror.com/blog/2006/09/the-multi-tasking-myth.html
+
+	multi tasking myth
+
+http://blog.asana.com/2013/02/no-meeting-wednesdays/
+
+	asana has no-meetings-wednesdays
+
+
+What the hell is maker's day? 
+	uninterrupted time to MAKE. 
+
+Why does engineering take time?
+
+	designing pieces of a puzzle is not easy. we have to determine size, role, complexity, etc. a simpler piece is easier to work with, is more compatible with the other pieces. a complex piece fits only fits into a complex puzzle. 
+	the design of the puzzle changes completely as soon as the stakeholder needs the 2nd feature.
+	the readablity of the puzzle impacts that 2 week, 3 month, and 12 month revisit of that code. 
+	that WHO THE HELL WROTE THIS PIECE OF JUNK moment. 
+	Works great for the original use-case.
+	Yet, is completely terrible to work with for the new kinds of customers you have, for the new business stakeholder needs.
+	Engineers can build that thing overnight, and you'll be stoked about it the next day. 
+	Then you want one more feature, and they say, oh, ha, about that, i need two weeks. I need to rebuild the original feature in a way that accomodates the new one.
+	Slow and steady momentum. Build slowly, take careful steps. Build simple, reusable pieces that are compatible with teh system. Functions need only one task. Features and systems should generally only have one use-case or stakeholder to satisfy.
+	Otherwise you'll pull the code in different directions. Changes to one use-case will have amplified affects on multiple others.
+	[the above is for another blog post]
+
+	Engineering/Designing/Making takes time.
+	There are huge costs to interruptions, context switching, and multi-tasking.
+	The modern workspace is a problem for a number of reasons - work/torture vs make.
+
+	my second day at Moveline was my first maker's day.
+	I was a junior engineer, and i was learning git, backbone, node, testing, etc [tech at moveline]. I needed training before i could be 'productive', and the question was 'what can he work on?'
+	if we're not in the office, how could I learn? The first day I'd been pairing with someone who knew what they were doing?
+	My first maker day, I talked async with our lead engineer over hipcaht, who pointed me toward different parts of the code base, and asked me to start a backbone sub-app to replace the current homepage. 
+	After some time on wikipedia and various websites, i had some idea of what that meant.
+	then i had to figure it out. 
+
+	The easy argument for Maker Day is productivity, most often correlated with features that shipped, lines of code, tasks accomplished. 
+	The part that isn't talked about is the huge value-add in learning. My first maker day, our lead dev threw me a link to Q and told me to implement promises in one of our backbone apps. I didn't know how to build an ajax http request!
+	That day was HUGELY productive for me as an engineer. 
+
+	I think the best way to learn anything is to jump into the deep end and flail around until you learn how to swim. 
+	When you can tread water, that's when we'll talk about stroke and form and what not.
+	[again, probably another post]
+
+
+	so what is maker's day like?
+
+Why can't we interrupt that time with meetings?
+
+Engineering is always learning. 
+when i first started writing code, building a feature that works was always the goal.
+if clicking the button made it go the right way, that was that. 
+
+it's much deeper than that. getting the website to "go" is the easy part. 
+powerful, functional things come out of hackathons. 
+We could stay up all night building out the new dashboard, complete with a 'working' login screen and 
+Sure there's value in those working prototypes. 
+but we still call them prototypes. 
+
+
