posts(gestures,spaces,windows)

--- a/_posts/techsposure/2016-06-14-spaces.md
+++ b/_posts/techsposure/2016-06-14-spaces.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 'Spaces'
+title: 'Spaces: The Infinite Frontier'
 categories:
 - Techsposure
 tags:
@@ -10,19 +10,45 @@ type: post
 
 ###*TL;DR*:
 
-Spaces are a built in mechanism for keeping your application windows uncluttered.
-For example, separating your social messaging apps/tabs from your work-related emails/documents.
+Spaces are a built in mechanism for keeping your application windows in separate buckets.
+
+For example, one space could hold your social messaging apps/tabs while another holds your work-related apps.
+
+Control over them stems from `Mission Control`, and is configured via `System Preferences > Mission Control`.
 
 ---
 
 ##Get a handle on them
 
-Crucial to taking advantage of spaces is getting a handle on gestures. 
+Crucial to taking advantage of spaces is getting a handle on [Gestures](/techsposure/gestures/),
+and then the available features in `Mission Control`.
 
-##Master list
+###Build-a-space:
 
-[List gesture functions and when to use them]
+1. Three-finger swipe up to open Mission Control
+2. Click and hold on an Application (A Chrome window, for example)
+3. Drag to:
+  - An already-open Space
+  - To the upper right-hand corner to create a new one
+  - To the right of an existing space, to create a full-screen App
 
-##`Handy` features, if you will
+###Navigating the Infinite Frontier;
 
-You can drag and drop applications into new spaces, delete old ones, and create spaces dedicated entirely to apps (aka full-screen mode)
+- **Mission Control** and clicks for days
+- 3 and 4 Finger swipes to slide back and forth between them
+
+###`Handy` features
+
+To Delete a space:
+
+1. Open Mission Control
+1. Move mouse up to spaces
+1. Wait for the little `X` to appear in the upper left of a space
+1. Click it or ticket.
+
+##Who needs a Dashboard?
+
+The Dashboard might be useful to some people... 
+
+If you want to disable it as a space, play with the `Dashboard` setting in `System
+Preferences > Mission Control`.
