--- a/_posts/techsposure/2016-06-14-gestures.md
+++ b/_posts/techsposure/2016-06-14-gestures.md
@@ -65,7 +65,7 @@ interested in the details
   disable notifications for 24 hours
 - **Mission Control**: Swipe up to show all your apps - from here you can easily
   drag an app to a new space.
-- **Show Desktop**: For when your [Hot Corner](http://russmatney.com/techsposure/hot-damn-hot-corners/) is all the way up there
+- **Show Desktop**: For when your [Hot Corner](/techsposure/hot-damn-hot-corners/) is all the way up there
 
 ##Mouse
 
@@ -89,7 +89,7 @@ To run the command, open a Terminal session, copy and paste this line, and then
 take the leap: tap `ENTER` to fire it, and update your defaults settings the
 manual way.
 
-```
+```bash
 defaults write com.google.Chrome.plist AppleEnableSwipeNavigateWithScrolls -bool TRUE
 ```
 
