--- a/_posts/techsposure/2016-08-01-editors.md
+++ b/_posts/techsposure/2016-08-01-editors.md
@@ -15,3 +15,14 @@ TBD
 ---
 
 TBD
+
+
+TLDR: sublime text is the old standard - if you want the new hotness, it's Atom or Brackets. If you want to be productive long term (duh) learn vim and put the time into iterm +tmux and/or emacs.
+
+writing code is not a light commitment; your editor is a serious choice too. For your own sake, Try more than one.
+
+Dreamweaver - heh.
+Sublime Text.
+Atom.
+Brackets?
+Vim bindings please.
