--- a/todo.org
+++ b/todo.org
@@ -31,6 +31,7 @@ include 'status'
 - [ ] patreon
 - [ ] kofi
 - [ ] bluesky
+** [ ] header/footer socials
 * old content
 ** [X] mix in content from blog-gatsby
 CLOSED: [2024-12-21 Sat 15:13]
@@ -44,6 +45,9 @@ no content?
 ** [X] dedupe the posts
 CLOSED: [2024-12-21 Sat 15:48]
 ** [ ] clean up narsty markdown in places
+** [ ] mix in poems and haskell post from medium
 ** [ ] mix in 'posts' from mind garden
 ** [ ] mix in 'notes' from mind garden
 ** [ ] mix 'groks' into notes/garden
+* homepage rewrite
+** [ ] pull in content/posts/etc from blog_home.org
