feat: pull in all medium posts
Pulls all medium posts and pictures as 'hundos'.

Some of these are pretty fun!

--- a/docs/_404.md
+++ b/docs/_404.md
@@ -6,8 +6,8 @@ Probably I rebuilt my blog or renamed a page or some nonsense.
 
 Maybe you're looking for:
 
-- Juice In Games?
-- a 100 word story?
-- a random bit of Techsposure?
+- Juice In Games? (wip)
+- a [100 word story](/posts/100-worders/)?
+- a random bit of [Techsposure](/posts/techsposure/)?
 
 Yeah me neither.
